src/css/content.scss
.content {
  /* Fonts */
  /* Note that Montserrat is enqueued in the PHP function that enqueues this file */
  img {
    max-width: 100%;
    height: auto !important;
  }
  img.size-full {
    width: 100%;
    height: auto;
  }

  embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
    height: auto;
  }

  .embed-container iframe,
  .embed-container object,
  .embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  .embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
    height: auto;
  }

  .embed-container iframe,
  .embed-container object,
  .embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  blockquote {
    font-weight: 100;
    font-size: 1.4rem;
    max-width: 600px;
    line-height: 1.4;
    position: relative;
    margin: 0 auto;
    padding: 0.5rem;
  }

  blockquote:before,
  blockquote:after {
    position: absolute;
    color: #f1efe6;
    font-size: 8rem;
    width: 4rem;
    height: 4rem;
  }

  blockquote:before {
    content: '“';
    left: -5rem;
    top: -2rem;
  }

  blockquote:after {
    content: '”';
    right: -5rem;
    bottom: 1rem;
  }

  cite {
    line-height: 3;
    text-align: left;
  }
  strong,
  b {
    font-weight: 600;
    font-size: 18px;
    color: #000;
  }
  figure {
    margin: 0;
  }
  a {
    color: #ed4d8b;
    text-decoration: none;
    &:hover {
      text-decoration: underline;
    }
  }
}

